[package]
name = "tcs-dhbw"
version = "0.1.1"
author = "Anycubical"
description = "Modules for a model traffic control system project at DHBW Stuttgart"
license = "MIT"
repository = "https://github.com/AnyCubical/vls"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_lib"
path = "src/lib.rs"
